Fix the `min-height` of `.hero-wrap`.

--- a/less/hero.less
+++ b/less/hero.less
@@ -4,7 +4,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	min-height: calc(18em + 70vw);
+	min-height: calc(18em + 65.625vw);
 	overflow: hidden;
 	
 	.hero-image {
